# raytracing

./: .gitignore  .readthedocs.yaml  LICENSE  NOTICE  NOTICES  Pipfile  README.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: coverage.yml  tests.yml
docs/: index.md  requirements.txt
docs/about/: bibliography.md  license.md  notice.md
docs/design/: data_models.md  data_models.puml  design.md  overview.md  overview.puml
src/raytracing/: __init__.py  main.py
src/raytracing/mathematics/: ray.py  vector3.py
src/raytracing/shapes/: hit.py  shape.py
tests/: test_main.py  test_ray.py  test_vector3.py
tests/ray-tracing/: test_main.py
tests/unit/shapes/: test_hit.py
